<project>
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.blalp.chatdirector</groupId>
	<artifactId>common</artifactId>
	<version>0.1.8</version>
	<packaging>jar</packaging>

	<name>ChatDirector</name>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<finalName>ChatDirector-${project.version}-${project.artifactId}</finalName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<manifestEntries>
								<Main-Class>com.blalp.chatdirector.ChatDirector</Main-Class>
								<Build-Number>1.0</Build-Number>
							</manifestEntries>
						</transformer>
					</transformers>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/versions/</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>jcenter</id>
			<name>jcenter-bintray</name>
			<url>https://jcenter.bintray.com</url>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.javacord</groupId>
			<artifactId>javacord</artifactId>
			<version>3.1.1</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>net.luckperms</groupId>
			<artifactId>api</artifactId>
			<version>5.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
			<version>2.11.3</version>
		</dependency>
	</dependencies>
</project>